<resources>
    <string name="app_name">SoundController</string>
    <string name="action_settings">Settings</string>

    <string name="application_enable">Application Enable</string>
    <string name="status_bar_icon_enable">Status Bar Icon Enable</string>
    <string name="current_volume_icon_enable">Current Volume Icon Enable</string>
    <string name="theme">Theme</string>
    <string name="apply">Apply</string>

    <!--theme-->
    <string name="dark">Dark</string>
    <string name="white">White</string>

    <!--button-->
    <string name="button_01">Button 1</string>
    <string name="button_02">Button 2</string>
    <string name="button_03">Button 3</string>
    <string name="button_04">Button 4</string>

    <!--function-->
    <string name="disable">Disable</string>
    <string name="music_play">Music Play</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="volume_00">Volume 0</string>
    <string name="volume_01">Volume 1</string>
    <string name="volume_02">Volume 2</string>
    <string name="volume_03">Volume 3</string>
    <string name="volume_04">Volume 4</string>
    <string name="volume_05">Volume 5</string>
    <string name="volume_06">Volume 6</string>
    <string name="volume_07">Volume 7</string>
    <string name="volume_08">Volume 8</string>
    <string name="volume_09">Volume 9</string>
    <string name="volume_10">Volume 10</string>
    <string name="volume_11">Volume 11</string>
    <string name="volume_12">Volume 12</string>
    <string name="volume_13">Volume 13</string>
    <string name="volume_14">Volume 14</string>
    <string name="volume_15">Volume 15</string>
</resources>
