<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_applicationEnableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/main_applicationEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_enable" />

        <CheckBox
            android:id="@+id/main_applicationEnableCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_currentVolumeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_applicationEnableLayout">

        <TextView
            android:id="@+id/main_currentVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_volume_icon_enable" />

        <CheckBox
            android:id="@+id/main_currentVolumeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_statusBarIconEnableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_currentVolumeLayout">

        <TextView
            android:id="@+id/main_statusBarIconEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_bar_icon_enable" />

        <CheckBox
            android:id="@+id/main_statusBarIconEnableCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_themeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_statusBarIconEnableLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme" />

        <Spinner
            android:id="@+id/main_theme"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:entries="@array/themeList"></Spinner>

    </LinearLayout>

    <View
        android:id="@+id/main_horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/main_themeLayout"
        android:background="#BDBDBD" />

    <LinearLayout
        android:id="@+id/main_buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_horizontalLine"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_01" />

            <Spinner
                android:id="@+id/main_button1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/functionList"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_02" />

            <Spinner
                android:id="@+id/main_button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/functionList"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_03" />

            <Spinner
                android:id="@+id/main_button3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/functionList"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_04" />

            <Spinner
                android:id="@+id/main_button4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/functionList"></Spinner>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/main_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_buttonLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/apply" />

</RelativeLayout>
